loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:7: error: '(' expected but identifier found.
    if crossing() == true {
       ^Poucet2:13: error: illegal start of simple expression
  } while (inter() == false) {
  ^Poucet2:13: error: ';' expected but '{' found.
  } while (inter() == false) {
                             ^