loopdowhile.Poucet2.scala.code
fin = false
while(fin == false) {
  var nbBiscuit = 0
  do {
    avance()
    var inter = true
    if crossing() == true {
      
    }inter = true {
    }else {
      inter = false
    }
  } while (inter() == false) {
    	if (estSurBiscuit() == true) {
      	nbBiscuit += 1
  		}avance()
  }if (nbBiscuit()>=3) {
    gauche()
  }else {
    droite()
  }
}